--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,64 @@
-<p>
-  about works!
-</p>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="assets/images/bdcamp.JPG" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/bestclub.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/yoga.JPG" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/kasam.JPG" alt="Third slide">
+    </div>  
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/images/odisha.JPG" alt="Third slide">
+    </div>     
+  </div>
+</div>
+<div id="about-yrc">
+  <h2>About Us</h2>
+  <p>Youth Red Cross (YRC) is one of the biggest and most active clubs and a non- profitable organization and voluntary service body in VIT functioning since July, 1999. YRC VIT, with its mission of protection of health and life, service to humanity, promotion of national and international friendship, and to develop the mental and moral capacities of the youth, promises to provide humanitarian services to the fellow human beings.</p>
+  <p>Being awarded the Best Student Club for the academic year 2017-18, it promises to strive and work upon building a nation based on humane commitment. It is essentially a social service club which aims at raising awareness among college students about social evils like substance abuse, elder abuse and child labor; organizing social welfare activities in campus such as health check-up camps, first-aid training camps and awareness seminars on health, hygiene and safety; helping the poor and needy, especially children by donating blood, clothes, notebooks, and other necessary items; disseminating the seven fundamental principles of Red Cross and Red Crescent Moment through activities that encourage the Red Cross ideals; developing personality and instilling confidence in students by making them participate and organize events.</p>
+</div>
+<div id="principles">
+  <h4>The Principles of Red Cross are our Principles too!</h4>
+  <ul>
+    <li>Humanity</li>
+    <li>Impartiality</li>
+    <li>Neutrality</li>
+    <li>Independence</li>
+    <li>Voluntary Service</li>
+    <li>Unity</li>
+    <li>Universality</li>
+  </ul>
+</div>
+<div id="mission-motto">
+  <div class="row justify-content-centre">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-2">
+      <h4>Our Motto</h4>
+      <p class="motto">We abide by the motto of the International Committee of the Red Cross,<br/> "With humanity, towards peace".</p>
+    </div>
+    <div class="col-sm-2"></div>
+    <div class="col-sm-2">
+      <h4>Our Mission</h4>
+      <p class="mission">Our mission is to motivate, encourage and initiate any kind of humanitarian activity and to include the youth of our nation in doing so. </p>
+    </div>
+    <div class="col-sm-3"></div>
+  </div>
+  <div class="row justify-content-centre">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-2">
+        <h4>Our Objective</h4>
+        <p class="objective">Our main objective is to promote and support at all times, the principles, 'Health', 'Service' and 'Friendship'.</p>
+      </div>
+      <div class="col-sm-2"></div>
+      <div class="col-sm-2">
+        <h4>Our Aim</h4>
+        <p class="aim">Our aim is to spread awareness about the Red Cross principles and promote Health, Service and Friendship among all.</p>
+      </div>
+      <div class="col-sm-3"></div>
+    </div>
+</div>
