added recent activity and responsive cover image

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="navbar-top">
-  <a class="navbar-brand" href="#" >Navbar</a>
+  <a class="navbar-brand" href="#" ><img src="assets/images/bg/logo.png" style="width: 60px; height: auto;"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,22 +9,22 @@
         <a class="nav-link" href="#about" >About<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#section-1" >Recent Updates</a>
+        <a class="nav-link" href="#recent-updates" >Recent Updates</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#section-2" >Activites & Events</a>
+        <a class="nav-link" href="#activities-events" >Activites & Events</a>
       </li>
       <li class="nav-item">
-          <a href="#section-4" class="nav-link">Team</a>
+          <a href="#team" class="nav-link">Team</a>
       </li>
       <li class="nav-item">
-        <a href="#section-4" class="nav-link">Awards</a>
+        <a href="#awards" class="nav-link">Awards</a>
       </li>
       <li class="nav-item">
-        <a href="#section-4" class="nav-link">Contact</a>
+        <a href="#contact" class="nav-link">Contact</a>
       </li>
       <li class="nav-item">
-        <a href="#section-4" class="nav-link"><span class="badge badge-danger" style="font-size: 15px;">Blood Donation</span></a>
+        <a href="#blood-donation" class="nav-link"><span class="badge badge-danger" style="font-size: 15px;">Blood Donation</span></a>
       </li>
     </ul>
   </div>
