--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,6 @@
+<app-jumbotron></app-jumbotron>
 <app-about></app-about>
+<app-recent-updates></app-recent-updates>
 <app-gallery></app-gallery>
 <app-team></app-team>
 <app-contactus></app-contactus>
