--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,19 +1,19 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="assets/images/bdcamp.JPG" alt="First slide">
+      <img class="d-block w-100" src="assets/images/about/bdcamp.JPG" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/bestclub.jpg" alt="Second slide">
+      <img class="d-block w-100" src="assets/images/about/bestclub.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/yoga.JPG" alt="Third slide">
+      <img class="d-block w-100" src="assets/images/about/yoga.JPG" alt="Third slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/kasam.JPG" alt="Third slide">
+      <img class="d-block w-100" src="assets/images/about/kasam.JPG" alt="Third slide">
     </div>  
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/odisha.JPG" alt="Third slide">
+      <img class="d-block w-100" src="assets/images/about/odisha.JPG" alt="Third slide">
     </div>     
   </div>
 </div>
