facebook embedded link

--- a/src/app/components/recent-updates/recent-updates.component.html
+++ b/src/app/components/recent-updates/recent-updates.component.html
@@ -4,6 +4,9 @@
       <h1 class="mx-auto" style="color: white">Recent Updates</h1>
       <div class="col-12 mt-3">
         <h2 style="color: white">Events</h2>
+        
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FYouthRedCrossVit%2Fposts%2F1763886050321682%3A0&width=500" width="500" height="743" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+
         <div class="row align-items-center text-center">
           <div class="col-12 col-md-6 col-lg-3 mt-2">
             <div class="card">
