--- a/src/app/components/recent-updates/recent-updates.component.html
+++ b/src/app/components/recent-updates/recent-updates.component.html
@@ -1,4 +1,4 @@
-<div id="recent-updates" style="background-image: linear-gradient(135deg, #be2222 0%, #f80004 74%);">
+<!--<div id="recent-updates" style="background-image: linear-gradient(135deg, #be2222 0%, #f80004 74%);">
   <div class="container">
     <div class="row row-content align-items-center fullspan">
       <h1 class="mx-auto" style="color: white">Recent Updates</h1>
@@ -42,6 +42,45 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>-->
+<div class="facebook-posts">
+  <h2>Recent Updates</h2>
+  <div class="events">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <iframe class="d-block w-100" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FYouthRedCrossVit%2Fposts%2F1763886050321682%3A0&width=500" width="500" height="740" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="false" allow="encrypted-media"></iframe>
+        </div>
+        <div class="carousel-item">
+          <iframe class="d-block w-100" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FYouthRedCrossVit%2Fposts%2F1759081970802090&width=500" width="500" height="574" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>      
+        </div>
+        <div class="carousel-item">
+          <iframe class="d-block w-100" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FYouthRedCrossVit%2Fposts%2F1741672722543015%3A0&width=500" width="500" height="715" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+        </div>
+        <div class="carousel-item">
+          <iframe class="d-block w-100" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FYouthRedCrossVit%2Fposts%2F1736858456357775%3A0&width=500" width="500" height="677" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>      
+        </div>
+        <div class="carousel-item">
+          <iframe class="d-block w-100" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FYouthRedCrossVit%2Fposts%2F1720800877963533%3A0&width=500" width="500" height="696" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>      
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
 </div>
