--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,4 +1,4 @@
-<div class="our-team">
+<div class="our-team" style="background-image: url('assets/images/backgrounds/background1.jpg')">
   <h2>TEAM</h2>
   <div class="team">
     <div class="row justify-content-center">
