--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -36,29 +36,29 @@
 </div>
 <div id="mission-motto">
   <div class="row justify-content-centre">
-    <div class="col-sm-3"></div>
-    <div class="col-sm-2">
+    <div class="col-sm-1 col-lg-3"></div>
+    <div class="col-sm-4 col-lg-2">
       <h4>Our Motto</h4>
       <p class="motto">We abide by the motto of the International Committee of the Red Cross,<br/> "With humanity, towards peace".</p>
     </div>
-    <div class="col-sm-2"></div>
-    <div class="col-sm-2">
+    <div class="col-sm-2 col-lg-2"></div>
+    <div class="col-sm-4 col-lg-2">
       <h4>Our Mission</h4>
       <p class="mission">Our mission is to motivate, encourage and initiate any kind of humanitarian activity and to include the youth of our nation in doing so. </p>
     </div>
-    <div class="col-sm-3"></div>
+    <div class="col-sm-1 col-lg-3"></div>
   </div>
   <div class="row justify-content-centre">
-      <div class="col-sm-3"></div>
-      <div class="col-sm-2">
+      <div class="col-sm-1 col-lg-3"></div>
+      <div class="col-sm-4 col-lg-2">
         <h4>Our Objective</h4>
         <p class="objective">Our main objective is to promote and support at all times, the principles, 'Health', 'Service' and 'Friendship'.</p>
       </div>
-      <div class="col-sm-2"></div>
-      <div class="col-sm-2">
+      <div class="col-sm-2 col-lg-2"></div>
+      <div class="col-sm-4 col-lg-2">
         <h4>Our Aim</h4>
         <p class="aim">Our aim is to spread awareness about the Red Cross principles and promote Health, Service and Friendship among all.</p>
       </div>
-      <div class="col-sm-3"></div>
+      <div class="col-sm-1 col-lg-3"></div>
     </div>
 </div>
