--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -2,8 +2,8 @@
   <h2>TEAM</h2>
   <div class="team">
     <div class="row justify-content-center">
-      <div class="col-md-1"></div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-lg-1"></div>
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/arinjoy.JPG" alt="Arinjoy">
           <div class="card-body">
@@ -15,7 +15,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/person-dummy.jpg" alt="Pranay">
           <div class="card-body">
@@ -27,7 +27,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/sandipan.jpg" alt="Sandipan">
           <div class="card-body">
@@ -39,7 +39,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/arpita.JPG" alt="Arpita">
           <div class="card-body">
@@ -51,7 +51,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/giri.jpeg" alt="Giri">
           <div class="card-body">
@@ -63,11 +63,11 @@
           </div>
         </div>
       </div>
-      <div class="col-md-1"></div>
+      <div class="col-lg-1"></div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-md-1"></div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-lg-1"></div>
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/sonali.JPG" alt="Sonali">
           <div class="card-body">
@@ -79,7 +79,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/raksha.png" alt="Raksha">
           <div class="card-body">
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/tharan.jpg" alt="Tharan">
           <div class="card-body">
@@ -103,7 +103,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/madhoora.jpg" alt="Madhoora">
           <div class="card-body">
@@ -115,7 +115,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/person-dummy.jpg" alt="Shivam">
           <div class="card-body">
@@ -127,11 +127,11 @@
           </div>
         </div>
       </div>
-      <div class="col-md-1"></div>
+      <div class="col-lg-1"></div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-md-1"></div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-lg-1"></div>
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/kamal.jpg" alt="Kamal">
           <div class="card-body">
@@ -143,7 +143,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/deepthi.png" alt="Deepthi">
           <div class="card-body">
@@ -155,7 +155,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/kavya.jpg" alt="Kavya">
           <div class="card-body">
@@ -167,7 +167,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/person-dummy.jpg" alt="Pratiti">
           <div class="card-body">
@@ -179,7 +179,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b16/nishu.JPG" alt="Nishu">
           <div class="card-body">
@@ -191,11 +191,11 @@
           </div>
         </div>
       </div>
-      <div class="col-md-1"></div>
+      <div class="col-lg-1"></div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-md-1"></div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-lg-1"></div>
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/nishant.jpeg" alt="Nishant">
           <div class="card-body">
@@ -207,7 +207,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/person-dummy.jpg" alt="Saksham">
           <div class="card-body">
@@ -219,7 +219,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/person-dummy.jpg" alt="Akshay">
           <div class="card-body">
@@ -231,7 +231,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/simrat.jpg" alt="Simrat">
           <div class="card-body">
@@ -243,7 +243,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/sarvesh.jpg" alt="Sarvesh">
           <div class="card-body">
@@ -255,11 +255,11 @@
           </div>
         </div>
       </div>
-      <div class="col-md-1"></div>
+      <div class="col-lg-1"></div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-md-1"></div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-lg-1"></div>
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/inturi.jpg" alt="Akhil">
           <div class="card-body">
@@ -271,7 +271,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/vedu.jpg" alt="Vedu">
           <div class="card-body">
@@ -283,7 +283,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/amisha.png" alt="Amisha">
           <div class="card-body">
@@ -295,7 +295,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/pratyush.jpeg" alt="Pratyush">
           <div class="card-body">
@@ -307,7 +307,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/husain.JPG" alt="Husain">
           <div class="card-body">
@@ -319,11 +319,11 @@
           </div>
         </div>
       </div>
-      <div class="col-md-1"></div>
+      <div class="col-lg-1"></div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-md-1"></div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-lg-1"></div>
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/sourabh.JPG" alt="Sourabh">
           <div class="card-body">
@@ -335,7 +335,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/shweta.jpeg" alt="Shweta">
           <div class="card-body">
@@ -347,7 +347,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4 col-md-2">
+      <div class="col-6 col-sm-4 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/samanwitha.jpg" alt="Samanwitha">
           <div class="card-body">
@@ -359,7 +359,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/suma.jpg" alt="Suma">
           <div class="card-body">
@@ -371,7 +371,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-2">
+      <div class="col-6 col-sm-6 col-lg-2">
         <div class="card team-member">
           <img class="card-img-top" src="assets/images/team/b17/sai.jpg" alt="Sai charan">
           <div class="card-body">
@@ -383,7 +383,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-1"></div>
+      <div class="col-lg -1"></div>
     </div>
   </div>
 </div>
