--- a/src/app/components/recent-updates/recent-updates.component.css
+++ b/src/app/components/recent-updates/recent-updates.component.css
@@ -72,4 +72,6 @@
 {
     color: rgb(255, 255, 255);
     text-align: center;
+    text-shadow: 1px 1px 1px rgb(146, 167, 168);
+    font-size: calc(1.5em + 1vmin);
 }
