--- a/src/app/components/team/team.component.css
+++ b/src/app/components/team/team.component.css
@@ -11,6 +11,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: calc(2em + 1vmin);
     font-weight: bold;
+    text-shadow: 1px 1px 1px rgb(153, 153, 153);
 }
 .team
 {
