added photo gallery

--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,3 +1,133 @@
-<p>
-  gallery works!
-</p>
+<div class="photo-gallery">
+  <h2>Photo Gallery</h2>
+  <div class="row justify-content-center">
+    <div class="column">
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/women_empowerment_skit.jpg" alt="women empowerment skit">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1688744417835846">Women Empowerment Skit</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/yoga_camp.jpg" slt="yoga camp">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1647865675257054">Yoga Camp</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/ice_breaking.jpg" alt="ice breaking session">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1586562728054016">Ice Breaking Session and <br>Session on CASA</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+    </div>
+    <div class="column">
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/swachh_bharat.jpg" slt="swachh bharat">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1553777437999212">Clean, Green, our Perfect Dream</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/casa.jpg" alt="casa awareness">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1520696777973945">GraVITas'17 Stall</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/visually_impaired_home.jpg" alt="visually impaired home visit">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1549615058415450">Visually Challenged Home visit</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+    </div>
+    <div class="column">
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/blood_donation_camp.jpg" alt="blood donation camp">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1477132865663670">YRC Blood Donation Camp, 2017</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/swachh_bharat_skit.jpg" alt="swachh bharat skit">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1517673021609654">Skit on Swachh Bharat Abhiyan</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/orphanage_visit.jpg" slt="orphanage visit">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1476038715773085">Orphanage Visit, 2017</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+    </div>
+    <div class="column">
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/five_star.jpg" alt="five star camp">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1060901600620134">Five Star health check-up camp</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/national_camp.jpg" alt="national camp">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=1363210797055878">National Camp</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+        <ul class="caption-style-1">
+            <li><img src="assets/images/gallery/roar.jpg" alt="R.O.A.R.">
+              <div class="caption">
+                <div class="blur"></div>
+                <div class="caption-text">
+                  <a href="https://www.facebook.com/pg/YouthRedCrossVit/photos/?tab=album&album_id=958159954227633">R.O.A.R - <br>Reach Out Act Respond</a>
+                </div>
+              </div>
+            </li>
+        </ul>
+    </div>
+  </div>
+</div>
