added blood donation and awards sections

--- a/src/app/components/blood-donation/blood-donation.component.html
+++ b/src/app/components/blood-donation/blood-donation.component.html
@@ -1,3 +1,13 @@
-<p>
-  blood-donation works!
-</p>
+<div class="blood_donation" id="blood-donation-component">
+  <h2>Blood Donation</h2>
+  <div class="media">
+      <div class="media-body">
+          <p>Certain injuries and illnesses can quickly cause a person's blood levels to drop. Without enough blood, they will not receive enough oxygen in their body, resulting in death. Many hospitals and medical centres utilize donated blood to save the lives of their patients. Most of the donated blood is used to help people with medical conditions that require blood or blood products regularly.</p>
+          <p>Donating blood has the power to impact up to three people who need the blood to survive. Knowing that they have made a difference to the lives of others can relieve a person's stress and make them feel mentally well or better about themselves than they did before.</p>
+          <p>Youth Red Cross, VIT organises a blood donation camp every year in the campus. All the students of VIT are encouraged to donate blood so that it can be useful to the needy patients in the hospitals nearby.</p>
+          <p>Blood donation is a service to humankind. By donating blood you help a needy and precious life. Share a little, care a little. Donate Blood!</p>
+      </div>
+      <img src="assets/images/blood_donation/blood_donation_camp.jpg" alt="Blood Donation Camp">
+  </div>
+  <img class="bd-img" src="assets/images/blood_donation/blood_donation_camp.jpg" alt="Blood Donation Camp">
+</div>
