--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer" id="footer-component">
   <div class="container">
     <div class="row">       
       <div class="col-lg-6 col-md-12 col-12">
@@ -20,7 +20,8 @@
         <h5>Our Address</h5><hr>
         <address>
           SMV 108, VIT, Vellore
-          <i class="fa fa-phone fa-lg"></i>: +44 20 7240 9319<br>
+          <!--<i class="fa fa-phone fa-lg"></i>: +44 20 7240 9319<br>-->
+          <br>
           <i class="fa fa-envelope fa-lg"></i>: <a href="#">yrc2k17@gmail.com</a><br><br>
         </address>
       </div>
