--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<div class="photo-gallery">
+<div class="photo-gallery" id="gallery-component">
   <h2>Photo Gallery</h2>
   <div class="row justify-content-center">
     <div class="column">
