--- a/src/app/components/recent-updates/recent-updates.component.html
+++ b/src/app/components/recent-updates/recent-updates.component.html
@@ -45,7 +45,7 @@
     </div>
   </div>
 </div>-->
-<div class="facebook-posts">
+<div class="facebook-posts" id="recent-updates-component">
   <h2>Recent Updates</h2>
   <div class="events">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
