--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -5,35 +5,48 @@
     position:fixed;
     z-index: -1;
 }
+@media screen and (min-width: 992px)
+{
+    #carouselExampleSlidesOnly
+    {
+        top:0;
+    }
+}
 #about-yrc
 {
     margin-top: 40vw;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding:1.5vw;
-    background-color: rgb(255, 255, 255);
-    color: #85434e;
+    /*background-color: rgb(255, 255, 255);
+    color: #85434e;*/
+    background-color: #D7CEC7;
+    color: #76323F;
     font-size: calc(0.6em + 1.5vmin);
     text-align: justify;
 }
 #about-yrc h2
 {
     text-align: center;
-    color: #68101e;
+    /*color: #68101e;*/
+    color: #76323F;
     font-weight: bold;
     font-size: calc(1em + 1.5vmin);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-shadow: 0.5px 0.5px 0.5px hsl(353, 100%, 98%);
+    margin-top: 2.5vw;
+    /*text-shadow: 0.5px 0.5px 0.5px hsl(353, 100%, 98%);*/
 }
 #principles h4
 {
     font-size: calc(0.5em + 1.4vmin);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-shadow: 1px 1px 1px rgb(87, 59, 75);
+    /*text-shadow: 1px 1px 1px rgb(87, 59, 75);*/
 }
 #principles
 {
-    color: white;
-    background-color: #830519;
+    /*color: white;
+    background-color: #830519;*/
+    color: #D7CEC7;
+    background-color: #76323F;
     font-size: calc(0.5em + 1.5vmin);
     padding:1vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -64,6 +77,7 @@
 }
 #mission-motto
 {
-    background-color: rgb(32, 32, 32);
+    /*background-color: rgb(32, 32, 32);*/
+    background-color: #565656;
     padding:1vw;
 }
