--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <!-- <app-jumbotron></app-jumbotron> -->
 <app-about></app-about>
 <app-recent-updates></app-recent-updates>
+<app-awards></app-awards>
+<app-blood-donation></app-blood-donation>
 <app-gallery></app-gallery>
 <app-team></app-team>
 <app-contactus></app-contactus>
