--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,4 +1,5 @@
-<div class="our-team" style="background-image: url('assets/images/backgrounds/background1.jpg')">
+<!--<div class="our-team" style="background-image: url('assets/images/backgrounds/background1.jpg')">-->
+<div class="our-team" id="team-component">
   <h2>TEAM</h2>
   <div class="team">
     <div class="row justify-content-center">
